--- a/asp.NetMvc/mvcGiris/Views/Home/PostIslemiYapilacak.cshtml
+++ b/asp.NetMvc/mvcGiris/Views/Home/PostIslemiYapilacak.cshtml
@@ -8,11 +8,11 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
+    <title>PostIslemiYapilacak</title>
 </head>
 <body>
     <div> 
-        <h1>İndex Sayfası</h1>
+        <h1>Post İşlemi Sayfası</h1>
     </div>
 </body>
 </html>
