--- a/asp.NetMvc/Views/Views/Home/homePage.cshtml
+++ b/asp.NetMvc/Views/Views/Home/homePage.cshtml
@@ -1,8 +1,17 @@
-﻿
-@{
-    ViewBag.Title = "homePage";
-    Layout = "~/Views/Shared/_LayoutPage1.cshtml";
-}
+﻿@*
+    Projelerimizde birden fazla Layout sayfalarımız olabilir. Her defasında proje içerisindeki yürlerce sayfanın Layout'unu teker teker değiştirmek yerine Views klasörünün altında oluşturulacak olan _ViewStart.cshtml dosyasından yararlanarak burada default Layout belirlenebilir.
+*@
 
-<h2>homePage</h2>
+    @{
+        ViewBag.Title = "homePage";
+        Layout = "~/Views/Shared/_LayoutPage2.cshtml";
+    }
+
+<h2>Ana Sayfa</h2>
+
+<hr />
+
+<p>Tincidunt integer eu augue augue nunc elit dolor, luctus placerat scelerisque euismod, iaculis eu lacus nunc mi elit, vehicula ut laoreet ac, aliquam sit amet justo nunc tempor, metus vel.</p>
+<p>Placerat suscipit, orci nisl iaculis eros, a tincidunt nisi odio eget lorem nulla condimentum tempor mattis ut vitae feugiat augue cras ut metus a risus iaculis scelerisque eu ac ante.</p>
+<p>Fusce non varius purus aenean nec magna felis fusce vestibulum velit mollis odio sollicitudin lacinia aliquam posuere, sapien elementum lobortis tincidunt, turpis dui ornare nisl, sollicitudin interdum turpis nunc eget.</p>
 
