İç-içe ( Nested ) Layout Kullanımı

--- a/asp.NetMvc/Views/Views/Home/contact.cshtml
+++ b/asp.NetMvc/Views/Views/Home/contact.cshtml
@@ -1,10 +1,12 @@
 ﻿
-@* Sayfada Layout belirtilmemiş o zaman _ViewStart.cshtml dosyasındaki default Layout kullanılacaktır. *@
+@{ 
+    Layout = "~/Views/Shared/_ChildLayoutPage.cshtml";
+}
 
 <h2>İletişim</h2>
 
 <hr />
 
 <p>Urna fermentum ut fusce varius nisl ac ipsum gravida vel pretium tellus tincidunt integer eu augue augue nunc.</p>
-<p>Elit dolor, luctus placerat scelerisque euismod, iaculis eu lacus nunc mi elit, vehicula ut laoreet ac, aliquam sit.</p>
-<p>Amet justo nunc tempor, metus vel placerat suscipit, orci nisl iaculis eros, a tincidunt nisi odio eget lorem.</p>
+<p>Ut fusce varius nisl ac ipsum gravida vel pretium tellus tincidunt integer eu augue augue nunc elit dolor, placerat.</p>
+
