RenderSection Method Kullanımı

--- a/asp.NetMvc/Views/Views/Home/contact.cshtml
+++ b/asp.NetMvc/Views/Views/Home/contact.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@{ 
+@{
     Layout = "~/Views/Shared/_ChildLayoutPage.cshtml";
 }
 
@@ -9,4 +9,15 @@
 
 <p>Urna fermentum ut fusce varius nisl ac ipsum gravida vel pretium tellus tincidunt integer eu augue augue nunc.</p>
 <p>Ut fusce varius nisl ac ipsum gravida vel pretium tellus tincidunt integer eu augue augue nunc elit dolor, placerat.</p>
+
+@section rightBlock{
+
+    <h3>İletişim Bilgileri</h3>
+
+    <hr />
+
+    <p>Adres : Deneme Cad. Farazi Sokak. No:40</p>
+    <p>Telefon : 0545 454 45 54</p>
+    <p>Çalışma Saatleri : 09:00 - 22:00</p>
+}
 
