--- a/asp.NetMvc/Views/Views/Shared/_MainLayoutPage.cshtml
+++ b/asp.NetMvc/Views/Views/Shared/_MainLayoutPage.cshtml
@@ -59,6 +59,10 @@
             <li>
                 @Html.ActionLink("İletişim", "contact")
             </li>
+
+            <li>
+                @Html.ActionLink("Referanslar", "references")
+            </li>
         </ul>
     </div>
 
