Partial Views Bitiş

--- a/asp.NetMvc/Views/Views/Shared/_ChildLayoutPage.cshtml
+++ b/asp.NetMvc/Views/Views/Shared/_ChildLayoutPage.cshtml
@@ -31,4 +31,7 @@
 <div class="block">
     <h3> Buradaki Sayfa İç İçe ( Nested ) İki Layout İçerisinde Yer Almaktadır. </h3>
     <p>İlk olarak _MainLayoutPage.cshtml oluşturuldu daha sonra bu Main Layoutu kullanması için _ChildLayoutPage.cshtml oluşturuldu ve bu sayfanın Layoutu ( _ChildLayoutPage.cshtml ) olarak belirlendi olarak belirlendi</p>
+
+    @Html.Partial("_PartialSiteHaritasi")
+
 </div>
