--- a/asp.NetMvc/Views/Views/Home/homePage.cshtml
+++ b/asp.NetMvc/Views/Views/Home/homePage.cshtml
@@ -11,3 +11,13 @@
 <p>Placerat suscipit, orci nisl iaculis eros, a tincidunt nisi odio eget lorem nulla condimentum tempor mattis ut vitae feugiat augue cras ut metus a risus iaculis scelerisque eu ac ante.</p>
 <p>Fusce non varius purus aenean nec magna felis fusce vestibulum velit mollis odio sollicitudin lacinia aliquam posuere, sapien elementum lobortis tincidunt, turpis dui ornare nisl, sollicitudin interdum turpis nunc eget.</p>
 
+
+@* Hazırlanan Partial'ı bir kaç yöntemle çağırmak mümkün *@
+
+@* 1.Yol *@
+@Html.Partial("_PartialSiteHaritasi")
+
+@* 2.Yol *@
+@{ 
+    Html.RenderPartial("_PartialSiteHaritasi");
+}
