--- a/asp.NetMvc/Bootstrap_HelperMethods/Views/Home/homePage2.cshtml
+++ b/asp.NetMvc/Bootstrap_HelperMethods/Views/Home/homePage2.cshtml
@@ -13,8 +13,8 @@
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
 
     <style>
-        .card{
-            margin-bottom:25px;
+        .card {
+            margin-bottom: 25px;
         }
     </style>
 
@@ -114,11 +114,11 @@
                     </div>
                     <div class="card-body">
                         <p class="card-text">
-                            Nunc elit dolor, luctus placerat scelerisque euismod, iaculis eu lacus nunc mi elit, vehicula ut laoreet ac, aliquam sit amet justo nunc tempor, metus vel placerat suscipit, orci nisl iaculis eros, a tincidunt nisi odio. <a href="#" class="btn btn-primary btn-sm">More</a>
+                            Nunc elit dolor, luctus placerat scelerisque euismod, iaculis eu lacus nunc mi elit, vehicula ut laoreet ac, aliquam sit amet justo nunc tempor, metus vel placerat suscipit, orci nisl iaculis eros, a tincidunt nisi odio. @BootstrapHelperMethods.ButtonA("btnDevam", text: "More")
                         </p>
                     </div>
                     <div class="card-footer">
-                        <span class="badge badge-warning">tag1</span>
+                        @BootstrapHelperMethods.Tag("warning","Tag1")
                         <span class="badge badge-warning">tag2</span>
                         <span class="badge badge-warning">tag3</span>
                     </div>
@@ -131,32 +131,7 @@
                 <h2>Kategoriler</h2>
                 <hr />
 
-                <ul>
-                    <li>
-                        <a href="#">Kategori 1</a>
-                    </li>
-                    <li>
-                        <a href="#">Kategori 2</a>
-                    </li>
-                    <li>
-                        <a href="#">Kategori 3</a>
-                    </li>
-                    <li>
-                        <a href="#">Kategori 4</a>
-                    </li>
-                    <li>
-                        <a href="#">Kategori 5</a>
-                    </li>
-                    <li>
-                        <a href="#">Kategori 6</a>
-                    </li>
-                    <li>
-                        <a href="#">Kategori 7</a>
-                    </li>
-                    <li>
-                        <a href="#">Kategori 8</a>
-                    </li>
-                </ul>
+               @BootstrapHelperMethods.LinkList("Kategoriler","Kategori 1", "Kategori 2", "Kategori 3", "Kategori 4", "Kategori 5", "Kategori 6", "Kategori 7", "Kategori 8")
             </div>
 
         </div>
