Views klasörünün altındaki web.config dosyasına NameSpace eklemek

--- a/asp.NetMvc/EF_CodeFirst/Views/Home/homePage.cshtml
+++ b/asp.NetMvc/EF_CodeFirst/Views/Home/homePage.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<Kisi>
+﻿@* Aşağıdaki Kisi nesnesine ulaşılması için Views klasörünün altındaki web.config dosyasına ilgili Namespace eklenmiştir. *@
+
+@model IEnumerable<Kisi>
 
 @{
     ViewBag.Title = "homePage";
