--- a/asp.NetMvc/EF_CodeFirst/Views/Kisi/Duzenle.cshtml
+++ b/asp.NetMvc/EF_CodeFirst/Views/Kisi/Duzenle.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Kisi
 
 @{
-    ViewBag.Title = "Yeni";
+    ViewBag.Title = "Kişi Düzenle";
 }
 
-<h2>Yeni Kişi</h2>
+<h2>Kişi Düzenle</h2>
 <hr />
 
 <div>
@@ -34,7 +34,7 @@
         </div>
 
         <div class="input-group mb-3">
-            <input type="submit" value="Kaydet" class="btn btn-success" />
+            <input type="submit" value="Güncelle" class="btn btn-success" />
         </div>
     }
 
