--- a/asp.NetMvc/EF_CodeFirst/Views/Shared/_Layout.cshtml
+++ b/asp.NetMvc/EF_CodeFirst/Views/Shared/_Layout.cshtml
@@ -18,13 +18,10 @@
         <div class="collapse navbar-collapse" id="acilirMenu">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/Home/homePage">Home Page</a>
+                    <a class="nav-link" href="/Kisi/Yeni">Kişi Ekle</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Home/homePage2">Home Page2</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/Home/homePage3">Home Page3</a>
+                    <a class="nav-link" href="/Adres/Yeni">Adres Ekle</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -49,10 +46,12 @@
         </footer>
     </div>
 
-
     <script src="~/Scripts/jquery-3.2.1.slim.min.js"></script>
+    <script src="~/Scripts/jquery-3.2.1.min.js"></script>
     <script src="~/Scripts/popper.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
    
+    @RenderSection("myScript", false)
+
 </body>
 </html>
